[UPDATE] Updated docker-compose api version

--- a/solution/docker-compose.yml
+++ b/solution/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.3"
 services:
 
     csvserver:
@@ -16,11 +16,8 @@ services:
         container_name: "prometheus"
         ports:
         - 9090:9090
-        command:
-        - --config.file=/etc/prometheus/prometheus.yml
-        - '--web.console.libraries=/usr/share/prometheus/console_libraries'
-        - '--web.console.templates=/usr/share/prometheus/consoles'
         volumes:
         - ${PWD}/prometheus:/etc/prometheus
+        command: --web.enable-lifecycle  --config.file=/etc/prometheus/prometheus.yml
         depends_on:
         - csvserver
